--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "@nrfcloud/device-simulator-v2",
   "version": "0.0.0-development",
   "description": "AWS IoT Thing simulator for nRF91",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "bin": {
+    "nrfdevice": "./dist/index.js"
+  },
   "scripts": {
     "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
