--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jest": "^24.0.11",
     "@types/node": "^12.0.7",
     "@types/uuid": "^3.4.4",
+    "axios": "^0.19.0",
     "husky": "^2.4.0",
     "json-schema-to-typescript": "^7.1.0",
     "lint-staged": "^8.2.0",
