--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "nrfdevice": "./dist/index.js"
+    "nrfsim": "./dist/index.js"
   },
   "scripts": {
     "build": "npx tsc",
@@ -36,6 +36,7 @@
     "@types/node": "^12.0.7",
     "@types/uuid": "^3.4.4",
     "axios": "^0.19.0",
+    "ez-cache": "^1.0.1",
     "husky": "^2.4.0",
     "json-schema-to-typescript": "^7.1.0",
     "lint-staged": "^8.2.0",
