--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "colors": "^1.3.2",
     "commander": "^2.19.0",
     "event-stream": "^4.0.1",
-    "ez-cache": "^1.0.1",
+    "ez-cache": "^1.1.0-beta.0",
     "tcomb": "^3.2.28",
     "uuid": "^3.3.2"
   },
