--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "bin": "./dist/cli.js",
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc && cp -r ./data dist/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npm run tslint && npm run prettier:lint",
     "tslint": "tslint --project ./tsconfig.json",
@@ -47,7 +47,7 @@
     "colors": "^1.3.2",
     "commander": "^2.19.0",
     "event-stream": "^4.0.1",
-    "ez-cache": "^1.1.0-beta.0",
+    "ez-cache": "^1.1.0",
     "tcomb": "^3.2.28",
     "uuid": "^3.3.2"
   },
