--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@nrfcloud/device-simulator-v2",
-  "version": "0.0.0-development",
+  "version": "0.0.0-beta.0",
   "description": "AWS IoT Thing simulator for nRF91",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "bin": "./dist/cli.js",
   "scripts": {
+    "build": "npx tsc && cp -r ./data dist/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npm run tslint && npm run prettier:lint",
     "tslint": "tslint --project ./tsconfig.json",
@@ -33,17 +37,18 @@
     "json-schema-to-typescript": "^7.1.0",
     "lint-staged": "^8.2.0",
     "prettier": "^1.18.1",
-    "semantic-release": "^17.0.1",
     "tslint": "^5.17.0",
     "typescript": "^3.5.1"
   },
   "dependencies": {
     "aws-iot-device-sdk": "^2.2.1",
     "aws-sdk": "^2.470.0",
+    "axios": "^0.19.0",
     "colors": "^1.3.2",
     "commander": "^2.19.0",
-    "dotenv": "^8.0.0",
     "event-stream": "^4.0.1",
+    "ez-cache": "^1.1.0",
+    "semantic-release": "^17.0.1",
     "tcomb": "^3.2.28",
     "uuid": "^3.3.2"
   },
@@ -55,7 +60,7 @@
     "access": "public"
   },
   "release": {
-    "branches": [
+   "branches": [
       "saga"
     ],
     "remoteTags": true
