--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "commander": "^2.19.0",
     "event-stream": "^4.0.1",
     "ez-cache": "^1.1.0",
-    "semantic-release": "^17.0.1",
     "tcomb": "^3.2.28",
     "uuid": "^3.3.2"
   },
@@ -60,9 +59,7 @@
     "access": "public"
   },
   "release": {
-   "branches": [
-      "saga"
-    ],
+    "branch": "saga",
     "remoteTags": true
   },
   "files": [
