--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "@nrfcloud/device-simulator-v2",
   "version": "0.0.0-development",
   "description": "AWS IoT Thing simulator for nRF91",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "bin": "./dist/cli.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc && cp -r ./data dist/",
+    "clean": "rm -rf .ez-cache",
     "lint": "npm run tslint && npm run prettier:lint",
-    "tslint": "tslint --project ./tsconfig.json",
     "prettier": "prettier --write \"./src/*.ts\"",
     "prettier:lint": "prettier --list-different \"./src/*.ts\"",
-    "schemas2ts": "json2ts schemas/message.schema.json src/app/appMessage.ts"
+    "schemas2ts": "json2ts schemas/message.schema.json src/app/appMessage.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tslint": "tslint --project ./tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -25,7 +30,6 @@
     "@commitlint/config-angular": "^8.0.0",
     "@nrfcloud/tslint-config": "^3.10.0",
     "@types/aws-iot-device-sdk": "^2.1.1",
-    "@types/dotenv": "^6.1.1",
     "@types/jest": "^24.0.11",
     "@types/node": "^12.0.7",
     "@types/uuid": "^3.4.4",
@@ -33,17 +37,17 @@
     "json-schema-to-typescript": "^7.1.0",
     "lint-staged": "^8.2.0",
     "prettier": "^1.18.1",
-    "semantic-release": "^17.0.1",
     "tslint": "^5.17.0",
     "typescript": "^3.5.1"
   },
   "dependencies": {
     "aws-iot-device-sdk": "^2.2.1",
     "aws-sdk": "^2.470.0",
+    "axios": "^0.19.0",
     "colors": "^1.3.2",
     "commander": "^2.19.0",
-    "dotenv": "^8.0.0",
     "event-stream": "^4.0.1",
+    "ez-cache": "^1.1.0",
     "tcomb": "^3.2.28",
     "uuid": "^3.3.2"
   },
@@ -55,9 +59,7 @@
     "access": "public"
   },
   "release": {
-    "branches": [
-      "saga"
-    ],
+    "branch": "saga",
     "remoteTags": true
   },
   "files": [
