build: fixed semantic release config bug

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "access": "public"
   },
   "release": {
-    "branch": "saga",
+    "branches": ["saga"],
     "remoteTags": true
   },
   "files": [
