--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "types": "dist/index.d.ts",
   "bin": "./dist/cli.js",
   "scripts": {
-    "build": "npx tsc && cp -r ./data dist/",
+    "build": "tsc && cp -r ./data dist/",
     "clean": "rm -rf .ez-cache",
-    "lint": "npm run tslint && npm run prettier:lint",
+    "lint": "yarn run tslint && yarn run prettier:lint",
     "prettier": "prettier --write \"./src/*.ts\"",
     "prettier:lint": "prettier --list-different \"./src/*.ts\"",
     "schemas2ts": "json2ts schemas/message.schema.json src/app/appMessage.ts",
@@ -26,40 +26,41 @@
   },
   "homepage": "https://github.com/nRFCloud/device-simulator-v2#readme",
   "devDependencies": {
-    "@commitlint/cli": "^8.0.0",
-    "@commitlint/config-angular": "^8.0.0",
-    "@nrfcloud/tslint-config": "^3.10.0",
-    "@types/aws-iot-device-sdk": "^2.1.1",
-    "@types/jest": "^24.0.11",
-    "@types/node": "^12.0.7",
-    "@types/uuid": "^3.4.4",
-    "husky": "^2.4.0",
-    "json-schema-to-typescript": "^7.1.0",
-    "lint-staged": "^8.2.0",
-    "prettier": "^1.18.1",
-    "tslint": "^5.17.0",
-    "typescript": "^3.5.1"
+    "@commitlint/cli": "^9.0.1",
+    "@commitlint/config-angular": "^9.0.1",
+    "@nrfcloud/tslint-config": "^3.11.1",
+    "@types/aws-iot-device-sdk": "^2.2.2",
+    "@types/jest": "^26.0.4",
+    "@types/node": "^14.0.20",
+    "@types/uuid": "^8.0.0",
+    "husky": "^4.2.5",
+    "json-schema-to-typescript": "^9.1.1",
+    "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.6"
   },
   "dependencies": {
-    "aws-iot-device-sdk": "^2.2.1",
-    "aws-sdk": "^2.470.0",
-    "axios": "^0.19.0",
-    "colors": "^1.3.2",
-    "commander": "^2.19.0",
+    "aws-iot-device-sdk": "^2.2.6",
+    "aws-sdk": "^2.712.0",
+    "axios": "^0.19.2",
+    "colors": "^1.4.0",
+    "commander": "^5.1.0",
     "event-stream": "^4.0.1",
     "ez-cache": "^1.1.0",
-    "tcomb": "^3.2.28",
-    "uuid": "^3.3.2"
+    "tcomb": "^3.2.29",
+    "uuid": "^8.2.0"
   },
   "engines": {
-    "node": ">=12.0.0",
-    "npm": ">=6.0.0"
+    "npm": "PLEASE_USE_YARN"
   },
   "publishConfig": {
     "access": "public"
   },
   "release": {
-    "branches": ["saga"],
+    "branches": [
+      "saga"
+    ],
     "remoteTags": true
   },
   "files": [
