feat: add support for FOTA V2 (#7)
* refactor: break out device and job logic from main file

* feat: added initial update for fota-v2 based on available documentation

* feat: updated listener to operate on JobExecutions

* refactor: cleaned up logger

* feat: added support for fota V2

* chore: update to correct beta version tag

* fix: cleaned up duplicate subscriptions and standardized message format for logger

* fix: add support for log to handle buffers

* version: updated version

* fix: cleaned up README and updated to only listen for jobs if already associated with account

* chore: bump version

* chore: bump version for npm release

* fix: fixed how config.stage is set

* fix: added correct modem version to default shadow since FE is now enforcing FW version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nrfcloud/device-simulator-v2",
-  "version": "0.0.0-development",
+  "version": "2.2.0-beta.2",
   "description": "AWS IoT Thing simulator for nRF91",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "tsc && cp -r ./data dist/",
     "clean": "rm -rf .ez-cache",
+    "fix": "npm run prettier",
     "lint": "yarn run tslint && yarn run prettier:lint",
     "prettier": "prettier --write \"./src/*.ts\"",
     "prettier:lint": "prettier --list-different \"./src/*.ts\"",
@@ -45,10 +46,11 @@
     "aws-sdk": "^2.712.0",
     "axios": "^0.19.2",
     "colors": "^1.4.0",
-    "commander": "^5.1.0",
+    "commander": "^6.2.0",
     "event-stream": "^4.0.1",
     "ez-cache": "^1.1.0",
     "tcomb": "^3.2.29",
+    "ts-enum-util": "^4.0.2",
     "uuid": "^8.2.0"
   },
   "engines": {
